<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#F5F1F8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#5E35B1"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/cardNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cardholder_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/cardNumberEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/expiryEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expiry_date"
            android:inputType="date"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/cvvEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cvv"
            android:inputType="numberPassword"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/payNowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_confirm"
        android:layout_marginTop="30dp"
        android:backgroundTint="#673AB7"
        android:textColor="#FFFFFF"/>

</LinearLayout>